https://trac.mach-ii.com/machii/ticket/706
(2010-09-06 peterfarrell)

* Redirect command incorrectly computer event-arg name in "args" and "persistArgs" 
with expression

For more information see:
https://trac.mach-ii.com/machii/ticket/546
(2010-08-21 peterfarrell)

------------------------------------------------
Improvements / Enhancements
------------------------------------------------
* Add property to set the interval in which to reload all changed 
components in the dashboard

For more information see:
https://trac.mach-ii.com/machii/ticket/695
(2010-09-09 peterfarrell)

* View library tags now support "event" and "module" attributes to
dynamically build URLs to a Mach-II event

For more information see:
https://trac.mach-ii.com/machii/ticket/431
(2010-09-09 peterfarrell)

* Add scribble pad to dashboard

For more information see:
https://trac.mach-ii.com/machii/ticket/708
(2010-09-07 peterfarrell)

* Add property viewer to dashboard

For more information see:
https://trac.mach-ii.com/machii/ticket/684
(2010-09-07 jorgeloyo)

* Add ability to set enctype if file tag exists

For more information see:
https://trac.mach-ii.com/machii/ticket/707
(2010-09-06 peterfarrell)

* Add support for threading on Railo

This adds support for multi-threading for message-subscribers
on the Railo engine.

For more information see:
https://trac.mach-ii.com/machii/ticket/85
(2010-09-02 peterfarrell)


* Add support for threading on OpenBD

This adds support for multi-threading for message-subscribers
on the OpenBD engine.

For more information see:
https://trac.mach-ii.com/machii/ticket/112
(2010-09-02 peterfarrell)

* Add file extension to MIME-type conversion in accept attribute in uploadFile()

The accept argument for uploadFile() will now convert file extensions (like
.jpg) to MIME types for you automatically.

For more information see:
https://trac.mach-ii.com/machii/ticket/455
(2010-08-02 peterfarrell)

* Added the optgroup form tag for HTML selects
