@@ -51,7 +51,6 @@ Notes:
 	<cfimport prefix="dashboard" taglib="/MachII/dashboard/customtags" />
 	<cfimport prefix="view" taglib="/MachII/customtags/view" />
 	<cfset copyToScope("${event.baseComponentData},${event.moduleData},${event.baseData}") />
-	<cfset copyToScope("${event.baseComponentData},${event.moduleData},${event.baseData}") />
 	<cfset variables.moduleOrder = StructKeyArray(variables.moduleData) />
 	<cfset ArraySort( variables.moduleOrder , "textnocase", "asc") />
 </cfsilent>
@@ -62,10 +61,9 @@ Notes:
 <h2 style="margin:1em 0 3px 0;">Base Module</h2>
 <table>
 	<tr>
-		<th style="width:25%;"><h3>Listeners (#ArrayLen(variables.baseComponentData.listeners)#)</h3></th>
-		<th style="width:25%;"><h3>Event-Filters (#ArrayLen(variables.baseComponentData.filters)#)</h3></th>
-		<th style="width:25%;"><h3>Plugins (#ArrayLen(variables.baseComponentData.plugins)#)</h3></th>
-		<th style="width:25%;"><h3>Configurable Properties (#ArrayLen(variables.baseComponentData.properties)#)</h3></th>
+		<th style="width:33%;"><h3>Listeners (#ArrayLen(variables.baseComponentData.listeners)#)</h3></th>
+		<th style="width:33%;"><h3>Event-Filters (#ArrayLen(variables.baseComponentData.filters)#)</h3></th>
+		<th style="width:33%;"><h3>Plugins (#ArrayLen(variables.baseComponentData.plugins)#)</h3></th>
 	</tr>
 	<tr>
 		<td style="padding:0;">
@@ -137,6 +135,13 @@ Notes:
 			</table>
 			</cfloop>
 		</td>
+	</tr>
+	<tr>
+		<th style="width:33%;"><h3>Configurable Properties (#ArrayLen(variables.baseComponentData.properties)#)</h3></th>
+		<th style="width:33%;"><h3>Endpoints (#ArrayLen(variables.baseComponentData.endpoints)#)</h3></th>
+		<th style="width:33%;"><h3>View-Loaders (#ArrayLen(variables.baseComponentData.viewloaders)#)</h3></th>
+	</tr>
+	<tr>
 		<td style="padding:0;">
 			<cfloop from="1" to="#ArrayLen(variables.baseComponentData.properties)#" index="i">
 			<table>
@@ -160,6 +165,52 @@ Notes:
 			</table>
 			</cfloop>
 		</td>
+		<td style="padding:0;">
+			<cfloop from="1" to="#ArrayLen(variables.baseComponentData.endpoints)#" index="i">
+			<table>
+				<tr <cfif i MOD 2>class="shade"</cfif>>
+					<td>
+						<p><a href="#buildUrl("config.reloadEndpoint", "endpointName=#variables.baseComponentData.listeners[i].name#")#">
+						<cfif variables.baseComponentData.endpoints[i].shouldReloadObject>
+							<span class="red">
+								<img src="#BuildEndpointUrl("dashboard.serveAsset", "file=/img/icons/exclamation.png")#" width="16" height="16" alt="Reload" />
+								&nbsp;#variables.baseComponentData.endpoints[i].name#
+							</span>
+						<cfelse>
+							<span class="green">
+								<img src="#BuildEndpointUrl("dashboard.serveAsset", "file=/img/icons/tick.png")#" width="16" height="16" alt="OK" />
+								&nbsp;#variables.baseComponentData.endpoints[i].name#
+							</span>
+						</cfif>
+						</a></p>
+					</td>
+				</tr>
+			</table>
+			</cfloop>
+		</td>
+		<td style="padding:0;">
+			<cfloop from="1" to="#ArrayLen(variables.baseComponentData.viewLoaders)#" index="i">
+			<table>
+				<tr <cfif i MOD 2>class="shade"</cfif>>
+					<td>
+						<p><a href="#buildUrl("config.reloadViewLoader", "viewLoaderName=#variables.baseComponentData.viewLoaders[i].name#")#">
+						<cfif variables.baseComponentData.viewLoaders[i].shouldReloadObject>
+							<span class="red">
+								<img src="#BuildEndpointUrl("dashboard.serveAsset", "file=/img/icons/exclamation.png")#" width="16" height="16" alt="Reload" />
+								&nbsp;#variables.baseComponentData.viewLoaders[i].name#
+							</span>
+						<cfelse>
+							<span class="green">
+								<img src="#BuildEndpointUrl("dashboard.serveAsset", "file=/img/icons/tick.png")#" width="16" height="16" alt="OK" />
+								&nbsp;#variables.baseComponentData.viewLoaders[i].name#
+							</span>
+						</cfif>
+						</a></p>
+					</td>
+				</tr>
+			</table>
+			</cfloop>
+		</td>
 	</tr>
 </table>
 
@@ -169,10 +220,9 @@ Notes:
 <h2 style="margin:1em 0 3px 0;">#UCase(Left(variables.moduleOrder[j], 1))##Right(variables.moduleOrder[j], Len(variables.moduleOrder[j]) -1)# Module</h2>
 <table>
 	<tr>
-		<th style="width:25%;"><h3>Listeners (#ArrayLen(variables.moduleComponentData[variables.moduleOrder[j]].listeners)#)</h3></th>
-		<th style="width:25%;"><h3>Event-Filters (#ArrayLen(variables.moduleComponentData[variables.moduleOrder[j]].filters)#)</h3></th>
-		<th style="width:25%;"><h3>Plugins (#ArrayLen(variables.moduleComponentData[variables.moduleOrder[j]].plugins)#)</h3></th>
-		<th style="width:25%;"><h3>Configurable Properties (#ArrayLen(variables.moduleComponentData[variables.moduleOrder[j]].properties)#)</h3></th>
+		<th style="width:33%;"><h3>Listeners (#ArrayLen(variables.moduleComponentData[variables.moduleOrder[j]].listeners)#)</h3></th>
+		<th style="width:33%;"><h3>Event-Filters (#ArrayLen(variables.moduleComponentData[variables.moduleOrder[j]].filters)#)</h3></th>
+		<th style="width:33%;"><h3>Plugins (#ArrayLen(variables.moduleComponentData[variables.moduleOrder[j]].plugins)#)</h3></th>
 	</tr>
 	<tr>
 		<td style="padding:0;">
@@ -244,6 +294,13 @@ Notes:
 			</table>
 			</cfloop>
 		</td>
+	</tr>
+	<tr>
+		<th style="width:25%;"><h3>Configurable Properties (#ArrayLen(variables.moduleComponentData[variables.moduleOrder[j]].properties)#)</h3></th>
+		<th style="width:33%;"><h3>Endpoints (#ArrayLen(variables.moduleComponentData[variables.moduleOrder[j]].endpoints)#)</h3></th>
+		<th style="width:33%;"><h3>View-Loaders (#ArrayLen(variables.moduleComponentData[variables.moduleOrder[j]].viewloaders)#)</h3></th>
+	</tr>
+	<tr>
 		<td style="padding:0;">
 			<cfloop from="1" to="#ArrayLen(variables.moduleComponentData[variables.moduleOrder[j]].properties)#" index="i">
 			<table>
@@ -259,6 +316,52 @@ Notes:
 							<span class="green">
 								<img src="#BuildEndpointUrl("dashboard.serveAsset", "file=/img/icons/tick.png")#" width="16" height="16" alt="OK" />
 								&nbsp;#variables.moduleComponentData[variables.moduleOrder[j]].properties[i].name#
+							</span>
+						</cfif>
+						</a></p>
+					</td>
+				</tr>
+			</table>
+			</cfloop>
+		</td>
+		<td style="padding:0;">
+			<cfloop from="1" to="#ArrayLen(variables.moduleComponentData[variables.moduleOrder[j]].endpoints)#" index="i">
+			<table>
+				<tr <cfif i MOD 2>class="shade"</cfif>>
+					<td>
+						<p><a href="#buildUrl("config.reloadEndpoint", "endpointName=#variables.moduleComponentData[variables.moduleOrder[j]].endpoints[i].name#|moduleName=#variables.moduleOrder[j]#")#">
+						<cfif variables.moduleComponentData[variables.moduleOrder[j]].endpoints[i].shouldReloadObject>
+							<span class="red">
+								<img src="#BuildEndpointUrl("dashboard.serveAsset", "file=/img/icons/exclamation.png")#" width="16" height="16" alt="Reload" />
+								&nbsp;#variables.moduleComponentData[variables.moduleOrder[j]].endpoints[i].name#
+							</span>
+						<cfelse>
+							<span class="green">
+								<img src="#BuildEndpointUrl("dashboard.serveAsset", "file=/img/icons/tick.png")#" width="16" height="16" alt="OK" />
+								&nbsp;#variables.moduleComponentData[variables.moduleOrder[j]].endpoints[i].name#
+							</span>
+						</cfif>
+						</a></p>
+					</td>
+				</tr>
+			</table>
+			</cfloop>
+		</td>
+		<td style="padding:0;">
+			<cfloop from="1" to="#ArrayLen(variables.moduleComponentData[variables.moduleOrder[j]].viewLoaders)#" index="i">
+			<table>
+				<tr <cfif i MOD 2>class="shade"</cfif>>
+					<td>
+						<p><a href="#buildUrl("config.reloadViewLoader", "viewLoaderName=#variables.moduleComponentData[variables.moduleOrder[j]].viewLoaders[i].name#|moduleName=#variables.moduleOrder[j]#")#">
+						<cfif variables.moduleComponentData[variables.moduleOrder[j]].viewLoaders[i].shouldReloadObject>
+							<span class="red">
+								<img src="#BuildEndpointUrl("dashboard.serveAsset", "file=/img/icons/exclamation.png")#" width="16" height="16" alt="Reload" />
+								&nbsp;#variables.moduleComponentData[variables.moduleOrder[j]].viewLoaders[i].name#
+							</span>
+						<cfelse>
+							<span class="green">
+								<img src="#BuildEndpointUrl("dashboard.serveAsset", "file=/img/icons/tick.png")#" width="16" height="16" alt="OK" />
+								&nbsp;#variables.moduleComponentData[variables.moduleOrder[j]].viewLoaders[i].name#
 							</span>
 						</cfif>
 						</a></p>
