@@ -84,6 +84,12 @@ https://trac.mach-ii.com/machii/ticket/546
 ------------------------------------------------
 Improvements / Enhancements
 ------------------------------------------------
+* Add ability to reload view-loaders in the dashboard
+
+For more information see:
+https://trac.mach-ii.com/machii/ticket/225
+(2010-09-12 peterfarrell)
+
 * Add property to set the interval in which to reload all changed 
 components in the dashboard
 
